GNOME Bugzilla – Bug 742877
Incorrect version comparison in preset_get_keyfile ()
Last modified: 2015-01-14 10:06:50 UTC
If there are no system presets it should be using app_version not system_version as that's zero.
Created attachment 294454 [details] [review] Fix incorrect preset version comparison Use app_version if there are no system presets, so that if the application presets are newer than the user presets they are merged.
Thanks for the patch, committed.